Removing the login security and slight enhancement in items handling

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,6 +2,9 @@
 <html xmlns:th="https://www.thymeleaf.org">
 <head lang="en">
   <meta charset="UTF-8"/>
+  <meta name="_csrf" content="${_csrf.token}"/>
+  <!-- default header name is X-CSRF-TOKEN -->
+  <meta name="_csrf_header" content="${_csrf.headerName}"/>
   <title>Sezzle Sample Calculator</title>
   <link rel="stylesheet" href="/main.css" />
 </head>
